--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,8 @@
+dependencyResolutionManagement {
+  versionCatalogs {
+    deps {
+      from(files('versions.toml'))
+    }
+  }
+}
 rootProject.name = 'gradle-dependencychecks-plugin'
