--- a/build.gradle
+++ b/build.gradle
@@ -77,7 +77,7 @@ publishing {
 
     maven {
       name = 'sonatype'
-      url "https://oss.sonatype.org/service/local/staging/deploy/maven2"
+      url "https://s01.oss.sonatype.org/service/local/staging/deploy/maven2"
 
       credentials {
         if (project.hasProperty('nexusUsername')) {
